# greencop

./: .gitignore  README.md  alembic.ini  pyproject.toml  test.db
.github/workflows/: ci.yml  test.yaml  test.yml
infra/: todo.md
infra/terraform/: .terraform.tfstate.lock.info  main.tf  provider.tf  variables.tf
infra/terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud_sql/: main.tf  variables.tf
services/customers/: .dockerignore  .env.test  Dockerfile  docker-compose.yml  main.py  requirements.txt
services/customers/alembic/: env.py
services/customers/alembic/versions/: 10d9e0b4de0c_add_room_and_sensor_tables.py  131d5d95f555_add_room_and_sensor_tables.py  a2230ed9b9a8_fix_room_and_sensor_tables.py
services/customers/api/routes/: customer.py  sensor.py  server_room.py
services/customers/api/schemas/: __init__.py  customer.py  room.py  sensor.py  server_room.py
services/customers/database/: session.py
services/customers/models/: customer.py  room.py  sensor.py
services/customers/tests/: test_customer.py  test_sensor.py  test_server_rooms.py
services/sensors/: go.mod  go.sum  main.go  todo.md
services/sensors/cmd/: config.yaml  parse_config.go  register.go  root.go
services/sensors/internal/: logging.go  parse_config.go
services/sensors/types/: config.go  customer.go  room.go  sensor.go
services/sensors/utils/: logging.go
web/greencop_front/: README.md  env.d.ts  package-lock.json  package.json  tailwind.config.js
web/greencop_front/src/: App.vue  main.ts
(+32 files in other folders)
